_output/manifest-istio.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: howto-k8s-http2-istio
  labels:
    istio-injection: enabled    
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: howto-k8s-http2-istio
  name: color
spec:
  host: color.howto-k8s-http2-istio.svc.cluster.local
  workloadSelector:
    matchLabels:
      app: color
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: color
  namespace: howto-k8s-http2-istio
spec:
  hosts:
  - color.howto-k8s-http2-istio.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: color
#         subset: red
#     route:
#     - destination:
#         host: color
#         subset: green
#     route:
#     - destination:
#         host: color
#         subset: red
#     route:
#     - destination:
#         host: color
#         subset: blue
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: howto-k8s-http2-istio
spec:
  ports:
    - port: 8080
      name: http2
  selector:
    app: client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: howto-k8s-http2-istio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: app
          image: 945673678728.dkr.ecr.us-west-2.amazonaws.com/howto-k8s-http2/color_client
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: red
  namespace: howto-k8s-http2-istio
spec:
  ports:
    - port: 8080
      name: http2
  selector:
    app: color
    version: red
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red
  namespace: howto-k8s-http2-istio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color
      version: red
  template:
    metadata:
      labels:
        app: color
        version: red
    spec:
      containers:
        - name: app
          image: 945673678728.dkr.ecr.us-west-2.amazonaws.com/howto-k8s-http2/color_server
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: blue
  namespace: howto-k8s-http2-istio
spec:
  ports:
    - port: 8080
      name: http2
  selector:
    app: color
    version: blue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
  namespace: howto-k8s-http2-istio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color
      version: blue
  template:
    metadata:
      labels:
        app: color
        version: blue
    spec:
      containers:
        - name: app
          image: 945673678728.dkr.ecr.us-west-2.amazonaws.com/howto-k8s-http2/color_server
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: green
  namespace: howto-k8s-http2-istio
spec:
  ports:
    - port: 8080
      name: http2
  selector:
    app: color
    version: green
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
  namespace: howto-k8s-http2-istio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color
      version: green
  template:
    metadata:
      labels:
        app: color
        version: green
    spec:
      containers:
        - name: app
          image: 945673678728.dkr.ecr.us-west-2.amazonaws.com/howto-k8s-http2/color_server
          ports:
            - containerPort: 8080
---
# metadata:
# spec:
#   ports:
#     - port: 8080
#       name: http2
apiVersion: v1
kind: Service
metadata:
  name: color
  namespace: howto-k8s-http2-istio
  labels:
    app: color
    service: color
spec:
  ports:
  - port: 8080
    name: http2
  selector:
    app: color
